# cirrus

./: Cargo.toml  README.md
.github/workflows/: book.yml  ci.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cli.md  features.md  introduction.md  migration.md  operations.md  quickstart.md
crates/cirrus/: Cargo.toml
crates/cirrus-backends/epics-ca/: Cargo.toml
crates/cirrus-backends/epics-ca/src/: lib.rs  real.rs
crates/cirrus-backends/epics-pva/: Cargo.toml
crates/cirrus-backends/epics-pva/src/: lib.rs  real.rs
crates/cirrus-backends/mock/: Cargo.toml
crates/cirrus-backends/mock/src/: lib.rs
crates/cirrus-backends/soft/: Cargo.toml
crates/cirrus-backends/soft/src/: detector.rs  lib.rs  motor.rs  signal.rs
crates/cirrus-callbacks/: Cargo.toml
crates/cirrus-callbacks/src/: lib.rs  tiled_sink.rs  zmq_sink.rs  zmq_source.rs
crates/cirrus-callbacks/tests/: tiled_sink_integration.rs  zmq_round_trip.rs
crates/cirrus-cli/: Cargo.toml
crates/cirrus-cli/src/: ca_devices.rs  checkpoint_store.rs  client.rs  lua_env.rs  main.rs  manager.rs  manager_lua.rs  repl.rs
crates/cirrus-cli/tests/: cli_round_trip.rs  repl_script.rs
crates/cirrus-core/: Cargo.toml
crates/cirrus-core/src/: error.rs  kind.rs  lib.rs  msg.rs  plan.rs  reading.rs  runtime.rs  status.rs  suspender.rs
crates/cirrus-derive/src/: lib.rs
crates/cirrus-devices/: Cargo.toml
crates/cirrus-devices/src/: detector.rs  lib.rs  signal.rs
crates/cirrus-devices/tests/: derive_device.rs
crates/cirrus-engine/: Cargo.toml
crates/cirrus-engine/src/: bundler.rs  engine.rs  lib.rs  sink.rs  suspender.rs
crates/cirrus-event-model/: Cargo.toml
crates/cirrus-event-model/src/: compose.rs  documents.rs  lib.rs
crates/cirrus-host/: Cargo.toml
crates/cirrus-host/src/: areadetector.rs  ca_suspender.rs  checkpoint_store.rs  lib.rs  lua_env.rs  lua_tiled.rs  manager_lua.rs  pva_devices.rs
crates/cirrus-plans/: Cargo.toml
crates/cirrus-plans/src/: lib.rs  patterns.rs  preprocessors.rs
crates/cirrus-protocols-async/: Cargo.toml
crates/cirrus-protocols-async/src/: lib.rs
crates/cirrus-protocols-sync/: Cargo.toml
crates/cirrus-protocols-sync/src/: lib.rs
crates/cirrus-qs/: Cargo.toml
crates/cirrus-qs/src/: dispatch.rs  lib.rs  lua_eval.rs  methods.rs  permissions.rs  queue.rs  registry.rs  server.rs  state.rs  tasks.rs
crates/cirrus-qs/tests/: qs_round_trip.rs
crates/cirrus-stream/: Cargo.toml
crates/cirrus-stream/src/: lib.rs  pipe.rs  sinks.rs  sources.rs
crates/cirrus-stream/src/sinks/: binary.rs
crates/cirrus-stream/src/sources/: pva_mon.rs
crates/cirrus/benches/: document_fanout.rs  plan_loop.rs
crates/cirrus/examples/: async_count.rs  scan_motor.rs  sync_count.rs
crates/cirrus/src/: lib.rs
crates/cirrus/tests/: end_to_end.rs  runengine_features.rs
doc/: 00-vision.md  01-architecture.md  02-event-model.md  03-runengine.md  04-devices.md  05-streaming.md  06-rules.md  07-milestones.md  08-decisions.md  09-references.md  10-roadmap.md
examples/: mini_beamline_scan.lua
examples/mini_beamline/: 02_monitor.lua  03_grid_scan.lua  04_abort.lua  05_remote_dispatcher.lua  05_remote_dispatcher.py  06_dcm_energy.lua  README.md
examples/mini_beamline_qs/: Cargo.toml
examples/mini_beamline_qs/src/: dcm.rs  main.rs  table.rs
