[package]
name = "cirrus-callbacks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document sinks: JSONL, table, etc."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-engine.workspace = true
