[package]
name = "cirrus-callbacks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document sinks: JSONL, table, etc."

[features]
default = []
zmq = ["dep:zmq", "dep:rmp-serde"]
tiled = ["dep:tiled-client", "dep:url"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-engine.workspace = true

zmq          = { version = "0.10", optional = true }
rmp-serde    = { version = "1", optional = true }
tiled-client = { path = "../../../tiled-rs/crates/tiled-client", optional = true }
url          = { version = "2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json.workspace = true
zmq = "0.10"
rmp-serde = "1"
cirrus-plans.workspace = true
cirrus-backend-soft = { path = "../cirrus-backends/soft" }
