[package]
name = "cirrus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cirrus CLI — qs-manager (server) and qs (client) subcommands."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
mlua.workspace = true
rustyline.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
zmq.workspace = true
cirrus-core.workspace = true
cirrus-engine.workspace = true
cirrus-event-model.workspace = true
cirrus-callbacks.workspace = true
cirrus-plans.workspace = true
cirrus-qs.workspace = true
cirrus-backend-soft.workspace = true
tiled-client = { git = "https://github.com/physwkim/tiled-rs.git", branch = "main", optional = true }
url = { version = "2", optional = true }
cirrus-stream = { workspace = true, optional = true }
cirrus-protocols-async = { workspace = true, optional = true }
epics-pva-rs = { version = "0.16.0", optional = true }
bytes = { workspace = true, optional = true }
cirrus-backend-epics-ca = { path = "../cirrus-backends/epics-ca", optional = true }
cirrus-backend-epics-pva = { path = "../cirrus-backends/epics-pva", optional = true }

[features]
default = ["ca", "pva"]
# Expose `tiled.*` Lua bindings (read-side: from_uri / keys /
# metadata / get) AND the `--doc-tiled` repl flag that wires
# `cirrus-callbacks::TiledSink` (write-side: register Documents
# into a Tiled catalog).
tiled = ["dep:tiled-client", "dep:url", "cirrus-callbacks/tiled"]
# Wire real backends (PvaMonitorSource + Hdf5FrameSink) into the
# `cirrus frame-source` subcommand. Without this feature the
# subcommand is a scaffolded stub that prints args and exits.
frame-source = [
    "dep:cirrus-stream",
    "dep:cirrus-protocols-async",
    "dep:epics-pva-rs",
    "dep:bytes",
    "cirrus-stream/pva",
    "cirrus-stream/hdf5",
    "cirrus-callbacks/zmq",
]
# Expose `ca_motor(name, val_pv, rbv_pv)` and
# `ca_detector(name, value_pv)` Lua factories that connect to a
# live EPICS Channel Access IOC. Pulls in `epics-ca-rs` via
# cirrus-backend-epics-ca's `real` feature.
ca = [
    "dep:cirrus-backend-epics-ca",
    "cirrus-backend-epics-ca/real",
    "dep:cirrus-protocols-async",
]
# Symmetric for PV Access — `pva_motor` / `pva_detector` Lua
# factories on top of `cirrus-backend-epics-pva`.
pva = [
    "dep:cirrus-backend-epics-pva",
    "cirrus-backend-epics-pva/real",
    "dep:cirrus-protocols-async",
]

[dev-dependencies]
cirrus-derive.workspace = true
tempfile = "3"

[[bin]]
name = "cirrus"
path = "src/main.rs"
