[package]
name = "cirrus-devices"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Signal, StandardDetector, and Device-tree composition."

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
