[package]
name = "cirrus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RunEngine + Bundler + Suspender."

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
