[package]
name = "cirrus-event-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document types for the bluesky event-model, hand-ported from the JSON schemas."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
