[package]
name = "cirrus-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cirrus host runtime — Lua bridge (build_lua), daemon-side mlua state (ManagerLuaState), CA/PVA device factories, checkpoint store. Reusable by cirrus-cli and downstream binaries that embed a RunEngine + queue server."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing.workspace = true
mlua.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
cirrus-core.workspace = true
cirrus-engine.workspace = true
cirrus-event-model.workspace = true
cirrus-plans.workspace = true
cirrus-qs.workspace = true
cirrus-backend-soft.workspace = true
tiled-client = { git = "https://github.com/physwkim/tiled-rs.git", branch = "main", optional = true }
url = { version = "2", optional = true }
cirrus-protocols-async = { workspace = true, optional = true }
cirrus-backend-epics-ca = { path = "../cirrus-backends/epics-ca", optional = true }
cirrus-backend-epics-pva = { path = "../cirrus-backends/epics-pva", optional = true }

[features]
default = []
# Expose `tiled.*` Lua bindings (read-side: from_uri / keys /
# metadata / get) — daemon-side `lua_tiled` module.
tiled = ["dep:tiled-client", "dep:url"]
# `ca_motor(name, val_pv, rbv_pv)` / `ca_detector(name, value_pv)` /
# CA-PV-backed suspender Lua factories. Pulls in `epics-ca-rs` via
# cirrus-backend-epics-ca's `real` feature.
ca = [
    "dep:cirrus-backend-epics-ca",
    "cirrus-backend-epics-ca/real",
    "dep:cirrus-protocols-async",
]
# Symmetric for PV Access — `pva_motor` / `pva_detector` Lua
# factories on top of `cirrus-backend-epics-pva`.
pva = [
    "dep:cirrus-backend-epics-pva",
    "cirrus-backend-epics-pva/real",
    "dep:cirrus-protocols-async",
]

[dev-dependencies]
cirrus-derive.workspace = true
tempfile = "3"

[lib]
path = "src/lib.rs"
