[package]
name = "cirrus-protocols-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ophyd-style sync protocol traits — blanket impls over the async traits."

[dependencies]
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
serde_json.workspace = true
