[package]
name = "cirrus-qs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "queueserver-compatible 0MQ JSON-RPC daemon backed by cirrus-engine."

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
cirrus-core.workspace = true
cirrus-engine.workspace = true
cirrus-event-model.workspace = true
cirrus-plans.workspace = true
cirrus-callbacks = { workspace = true, features = ["zmq"] }
zmq = "0.10"
regex = "1"
toml = "0.8"

# Optional Prometheus metrics endpoint.
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false, features = ["http-listener"] }

[features]
default = []
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
cirrus-backend-soft = { path = "../cirrus-backends/soft" }
tempfile = "3"
