[package]
name = "cirrus-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FrameSource/Sink + FramePipe + reference sources/sinks."

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
# Enables PvaMonitorSource by linking epics-pva-rs.
pva = ["dep:epics-pva-rs"]
# Enables Hdf5FrameSink (pure-Rust, no system libhdf5).
hdf5 = ["dep:rust-hdf5"]

[dependencies.epics-pva-rs]
version = "0.16.2"
optional = true

[dependencies.rust-hdf5]
version = "0.2"
features = ["deflate"]
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
