[package]
name = "cirrus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cirrus facade — re-exports `ophyd_async` and `ophyd` modules."

[dependencies]
cirrus-core.workspace = true
cirrus-engine.workspace = true
cirrus-event-model.workspace = true
cirrus-plans.workspace = true
cirrus-devices.workspace = true
cirrus-protocols-async.workspace = true
cirrus-protocols-sync.workspace = true
cirrus-callbacks.workspace = true
cirrus-stream.workspace = true
cirrus-backend-soft = { path = "../cirrus-backends/soft" }
cirrus-backend-mock = { path = "../cirrus-backends/mock" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true
serde_json.workspace = true
cirrus-engine.workspace = true
