[package]
name = "cirrus-backend-epics-ca"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EPICS Channel Access backend for cirrus, built on epics-ca-rs."

[features]
default = []
# Wires up the actual epics-ca-rs dependency. Disabled by default until the
# epics-ca-rs API is wired by hand. Without this feature the crate exposes
# only stubs that always return `Backend("epics-ca disabled")` errors.
real = []

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
