[package]
name = "cirrus-backend-epics-pva"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EPICS PV Access backend for cirrus, built on epics-pva-rs."

[features]
default = []
real = []

[dependencies]
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
