[package]
name = "cirrus-backend-epics-pva"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EPICS PV Access backend for cirrus, built on epics-pva-rs."

[features]
default = ["real"]
# Links `epics-pva-rs`. On by default for the same reason as
# `cirrus-backend-epics-ca` — disable via `--no-default-features`
# for the stub.
real = ["dep:epics-pva-rs"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
cirrus-devices.workspace = true

epics-pva-rs = { version = "0.16.0", optional = true }
