[package]
name = "cirrus-backend-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock backend for unit tests."

[dependencies]
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
cirrus-devices.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
