[package]
name = "cirrus-backend-soft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Soft (in-memory) signal backend + soft detector for tests and demos."

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
cirrus-core.workspace = true
cirrus-event-model.workspace = true
cirrus-protocols-async.workspace = true
cirrus-devices = { path = "../../cirrus-devices" }
